# prompt-lab

./: .env.example  .gitignore  PLAN.md  README.md  cli.py  pyproject.toml
.github/workflows/: release.yml  test.yml
experiments/greeting-experiment/: experiment.md  inputs.yaml  judge.md
experiments/greeting-experiment/v1/: prompt.md
experiments/greeting-experiment/v2/: prompt.md
experiments/shoes-that-fit-any-foot/: experiment.md  inputs.yaml  judge.md
experiments/shoes-that-fit-any-foot/v1/: prompt.md
experiments/shoes-that-fit-any-foot/v2/: prompt.md
experiments/weather-tool-calling/: experiment.md  inputs.yaml  judge.md
experiments/weather-tool-calling/v1/: prompt.md  system.md  tools.yaml
promptlab/: __init__.py  cache.py  cli.py  display.py  judge.py  loader.py  runner.py
promptlab/application/: __init__.py  create_experiment.py  evaluate_response.py  run_experiment.py
promptlab/application/prompts/: __init__.py  judge_cot_prefix.md  judge_suffix.md
promptlab/domain/: __init__.py  statistics.py
promptlab/domain/contracts/: __init__.py  cache.py  config.py  provider.py  results.py  scaffold.py
promptlab/infrastructure/: __init__.py  console_display.py  experiment_scaffolder.py  file_cache.py  file_result_repository.py  yaml_config_loader.py
promptlab/providers/: anthropic.py  base.py  openai.py
tests/: __init__.py  test_cache.py  test_cli_key_refs.py  test_cli_version.py  test_console_display.py  test_create_experiment.py  test_loader.py  test_multi_judge.py  test_providers.py  test_runner.py  test_statistics.py
(+10 files in other folders)
